Fixes bug disabling thread creation in nablafeed, even for users with permission.
Also fixes rendering of the thread form, so that it does not render
for users whitout post permission.

--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -96,7 +96,7 @@
 
             
              
-            {% if not chosen_channel.is_feed or perms.nablaforum.can_post_in_nablafeed %}
+            {% if render_thread_form %}
             <form method="POST">
                 {% csrf_token %}
                 <h4>Ny tråd:</h4>
