--- a/templates/comments/comment_line.html
+++ b/templates/comments/comment_line.html
@@ -5,9 +5,9 @@
 
 <div class="row pl-3" id="c{{ comment.id }}">
     <div class="col-1 p-0">
-    <img  alt="avatar" class="rounded img-fluid" src=
-        {% if comment.user.avatar %}
-            "{% thumbnail comment.user.avatar 150x150 box=comment.user.cropping %}"
+    <img alt="avatar" class="rounded img-fluid" src=
+        {% if user.avatar %}
+            "{% thumbnail user.avatar 150x150 box=user.cropping %}"
         {% else %}
             "{% static "img/default_avatar.png" %}"
         {%endif %}>
@@ -16,7 +16,7 @@
         <div class="info">
             <span class="author">
                 <a href="{% url "member_profile" user.username %}">
-                    {% firstof comment.user.get_full_name comment.user.username %}
+                    {% firstof user.get_full_name user.username %}
                 </a>
             </span>
             <span class="date">{{ comment.submit_date|naturalday }}</span>
