gjorde melding mindre forvirrende. close #401

--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -176,7 +176,7 @@
                     {% endif %}
                 </div>
             {% else %}
-                Påmeldingen er stengt.
+                Påmelding er ikke åpen
             {% endif %}
         {% else %} {# Show deregistration button #}
             <input type="hidden" name="registration_type" value="deregistration">
