Øver meg på å commite

--- a/templates/base.html
+++ b/templates/base.html
@@ -246,7 +246,7 @@
                             {# Faste lenker om Nabla #}
                             <a class="dropdown-item" href="{% url "nablad_list" %}">Nabladet</a>
                             <a class="dropdown-item" href="{% url "season_view" %}">Skråttcast</a>
-                            <a class="dropdown-item" href="{% url "meeting_record_list" %}">Styremøtereferater</a>
+                            <a class="dropdown-item" href="{% url "meeting_record_list" %}">Hei</a>
                             <a class="dropdown-item" href="{% url "albums" %}">Bildealbum</a>
                             <a class="dropdown-item" href="{% url "blog" %}">Blogg</a>
                             <a class="dropdown-item" href="/julekalender/2019/">Julekalender 2019</a>
