Improves ticekt admin interface.
Also modifies API endpoint for updating tickets, so that it may only
be used for registering ticekts that were not already registered.
May be more sensible to rename the view to "ScanTicketView" or
something.

--- a/nablapps/qrTickets/templates/qrTickets/event_list.html
+++ b/nablapps/qrTickets/templates/qrTickets/event_list.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>QR-events</h1>
+<h1>Administrer QR-billetter</h1>
 
+<button><a href="{% url 'create-qr-event' %}">Opprett nytt QR-arrangement</a></button>
+
+<h4>Arrangementer med QR-billetter:</h4>
 {% for event in object_list %}
     <div>
         <a href="{% url 'qr-event-detail' event.id %}">{{ event }}</a>
