Makes optional form field actually optional.
Also some updates to the front end, making it ready for
a demo to Arrkom.

--- a/nablapps/qrTickets/templates/qrTickets/qr_event_detail.html
+++ b/nablapps/qrTickets/templates/qrTickets/qr_event_detail.html
@@ -21,6 +21,7 @@
 <h1>Administrerer billetter for: {{ event }}</h1>
 
 <button><a href="{% url 'qr-event-list' %}">Tilbake til listen over qr-arrangementer</a></button>
+<button><a href="{% url 'scan' %}">Scan og registrér billetter</a></button>
 
 <h4>Det har allerede blitt sendt ut billett til:</h4>
 <div class="qr-ticket-container">
