--- a/nablapps/qrTickets/templates/qrTickets/scan.html
+++ b/nablapps/qrTickets/templates/qrTickets/scan.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <!-- Temporarily using cdn for js imports -->
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script><!-- Vue2 -temporarily-->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <!-- Temporarily using file in static -->
 <script src={% static "qrTickets/VueQrcodeReader.umd.min.js" %}></script>
