--- a/nablapps/qrTickets/templates/qrTickets/qr_event_detail.html
+++ b/nablapps/qrTickets/templates/qrTickets/qr_event_detail.html
@@ -20,8 +20,8 @@
 
 <h1>Administrerer billetter for: {{ event }}</h1>
 
-<button><a href="{% url 'qr-event-list' %}">Tilbake til listen over qr-arrangementer</a></button>
-<button><a href="{% url 'scan' %}">Scan og registrér billetter</a></button>
+<a href="{% url 'qr-event-list' %}" class="btn btn-outline-primary">Tilbake til listen over qr-arrangementer</a>
+<a href="{% url 'scan' %}" class="btn btn-outline-primary">Scan og registrér billetter</a>
 
 <h4>Det har allerede blitt sendt ut billett til:</h4>
 <div class="qr-ticket-container">
