Moves university list to the exchange frontpage (replaces news).

--- a/nablapps/exchange/templates/exchange/ex_detail_list.html
+++ b/nablapps/exchange/templates/exchange/ex_detail_list.html
@@ -51,7 +51,7 @@
     {% endif %}
     <ul class="pagination">
         <li class="page-item">
-            <a class="page-link" href="{% url 'ex_list' %}"><span aria-hidden="true">&larr;</span> Tilbake til oversikten</a>
+            <a class="page-link" href="{% url 'ex_frontpage' %}"><span aria-hidden="true">&larr;</span> Tilbake til oversikten</a>
         </li>
     </ul>
 
