--- a/templates/base.html
+++ b/templates/base.html
@@ -432,8 +432,8 @@
 {#                        <a class="email" href="mailto:nabla@nabla.ntnu.no">nabla@nabla.ntnu.no</a>#}
                         <p > <a href="/contact/">Kontaktside</a> <br>
                         Nabla <br>
-                        Kjemiblokk 2 <br>
-                        Sem Sælands vei 10, NTNU <br>
+                        NV-Fakultetet, Realfagsbygget <br>
+                        Høgskoleringen 5, NTNU <br>
                         7034 Trondheim <br>
                         Norway
                     </p>
