--- a/nablapps/exchange/templates/exchange/include/ex_list.html
+++ b/nablapps/exchange/templates/exchange/include/ex_list.html
@@ -23,7 +23,7 @@
             <tr>
                 <td><a href="{% url 'ex_detail_list' obj.id %}">{{obj.univ_navn}}</a></td>
                 {% for retn in obj.get_has_retning_list %}
-                    <td>{% if retn %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
+                    <td>{% if retn %}<span class="fa fa-check"></span>{% endif %}</td>
                 {% endfor %}
                 <td>{{obj.land}}</td>
             </tr>
