Slightly updates the layout

--- a/nablapps/exchange/templates/exchange/ex_detail_list.html
+++ b/nablapps/exchange/templates/exchange/ex_detail_list.html
@@ -18,7 +18,7 @@
                 <th>Fag</th>
                 <th>Annet</th>
                 <th>Facebookprofil</th>
-                <th>Utveksling start</th>
+                <th>Start</th>
                 <th>Slutt</th>
             </tr>
             </thead>
