--- a/nablapps/exchange/templates/exchange/exchange_frontpage.html
+++ b/nablapps/exchange/templates/exchange/exchange_frontpage.html
@@ -19,9 +19,7 @@
     internasjonal sekjson ved NTNU, samt en oversikt over universiteter hvor
     FysMat-ere har utvekslet til før med tilhørende informasjon.
     </p>
-
-    <a href="{{ ex_news_url }}">Nyheter om utveksling</a>
-    
+    <a href="{{ ex_news_url }}"><b>Til nyheter om utveksling</b></a>
 </div>
 
 {% include "./include/ex_list.html" %}
