--- a/nablapps/exchange/templates/exchange/include/ex_list.html
+++ b/nablapps/exchange/templates/exchange/include/ex_list.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>Utveksling</h2>
+    <h2>Universiteter</h2>
     <form method="GET" action="">
         <input type="text" name="q" placeholder="" value="{{request.GET.q}}"/>
         <input type="submit" value="Søk"/>
