Updates all mentions of x@nabla.ntnu.no to x@nabla.no

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -80,7 +80,7 @@
         </p>
         <h4>Bedrift?</h4>
         <p>
-            Sjekk ut <a href="/bedriftskontakten/">bedriftskontakten sine sider</a>, eller ta kontakt med bedriftskontakten på <a href="mailto:bedkom@nabla.ntnu.no">bedkom@nabla.ntnu.no</a>.
+            Sjekk ut <a href="/bedriftskontakten/">bedriftskontakten sine sider</a>, eller ta kontakt med bedriftskontakten på <a href="mailto:bedkom@nabla.no">bedkom@nabla.no</a>.
         </p>
     </div>
     {% else %}
