--- a/nablapps/core/templates/core/general_about.html
+++ b/nablapps/core/templates/core/general_about.html
@@ -8,7 +8,7 @@
         <br><br>
             <b>Styremøter torsdager kl.10:15-12:00</b><br>
 Styret har ukentlige møter, og her har du som komponent møterett. Om du vil komme innom på et av møtene våre, ta kontakt med et av styremedlemmene, eller hele styret:
-nabla@nabla.ntnu.no
+nabla@nabla.no
         </p>
     </div>
 {% endblock content %}
