--- a/nablapps/jobs/templates/jobs/sidebar_include.html
+++ b/nablapps/jobs/templates/jobs/sidebar_include.html
@@ -11,8 +11,8 @@
 {% endif %}
 
 <h3>Vil du ha stillingsannonsen din her?</h3>
-<p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:bedkom@nabla.ntnu.no">
-bedkom@nabla.ntnu.no</a>. Les mer om bedriftskontakten <a href="/bedriftskontakten/">her</a>.</p>
+<p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:bedkom@nabla.no">
+bedkom@nabla.no</a>. Les mer om bedriftskontakten <a href="/bedriftskontakten/">her</a>.</p>
 
 {% if jobsidebarinfo %}
     <p>
