--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,7 @@
 <h1>500 - Oi da</h1>
 <p>
     Her har det skjedd noe galt! Ta kontakt med webkom på <a
-    href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>, og fortell så detaljert
+    href="mailto:webkom@nabla.no">webkom@nabla.no</a>, og fortell så detaljert
 som mulig hva du gjorde når dette skjedde.
 
 <br>
