--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
 
          Hvis du er her, så er du kanskje interessert i å bli med i WebKom?
          Vi gjør masse kule ting - visste du at WebKom drifter flere servere på NTNU, at vi har ukentlige møter med sosial koding, og at dette er en super arena for å lære masse om data?
-         Søk neste opptak, send oss en mail på webkom@nabla.ntnu.no eller send en melding til noen i WebKom hvis du er interessert!
+         Søk neste opptak, send oss en mail på webkom@ntnu.no eller send en melding til noen i WebKom hvis du er interessert!
     -->
 
     <head>
@@ -429,7 +429,7 @@
                 </div>
                  <div class="col-lg-3 text-center ">
                     <h2>Kontakt</h2>
-{#                        <a class="email" href="mailto:nabla@nabla.ntnu.no">nabla@nabla.ntnu.no</a>#}
+{#                        <a class="email" href="mailto:nabla@nabla.no">nabla@nabla.no</a>#}
                         <p > <a href="/contact/">Kontaktside</a> <br>
                         Nabla <br>
                         NV-Fakultetet, Realfagsbygget <br>
@@ -445,7 +445,7 @@
                     <p>
                     Har du funnet en feil, får du ikke logget på, eller er det noe som burde forbedres? <br>
                     Fyll ut <a href="/contact/feedback/">tilbakemeldingskjema</a> eller kontakt webkom:<br>
-                    <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
+                    <a class="email" href="mailto:webkom@nabla.no">webkom@nabla.no</a>
                     </p>
                 </div>
 
