Simplifies templates, replaces migrations

--- a/nablapps/exchange/templates/exchange/exchange_news.html
+++ b/nablapps/exchange/templates/exchange/exchange_news.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 
-{% block main %}
+{% block content %}
 
 {% addtoblock "css" %}
     <link rel="stylesheet" href="{% static "exchange/exchange.css" %}">
@@ -43,4 +43,4 @@
 {% include "includes/pagination.html" %}
 
 
-{% endblock main %}
+{% endblock content %}
