--- a/nablapps/exchange/templates/exchange/ex_detail_list.html
+++ b/nablapps/exchange/templates/exchange/ex_detail_list.html
@@ -28,8 +28,12 @@
                 <td>{{obj.get_retning_display}}</td>
                 <td>{{obj.start|date:"F Y"}}</td>
                 <td>{{obj.end|date:"F Y"}}</td>
-                {% if obj.fag %}
-                    <td>{{obj.fag }}</td>
+                {% if obj.subject_set.exists %}
+                    <td>
+                    {% for subject in obj.subject_set.all %}
+                        <p>{{ subject.code }} {{ subject.name }}</p>
+                    {% endfor %}
+                    </td>
                 {% else %}
                     <td>-</td>
                 {% endif %}
@@ -37,7 +41,7 @@
                     <td>{{obj.student.email}}</td>
                 {% endif %}
                 {% if obj.facebook %}
-                    <td>{{obj.facebook }}</td>
+                    <td><a href="{{obj.facebook }}">Til facebook</a></td>
                 {% else %}
                     <td>-</td>
                 {% endif %}
