Fixed html grid bug where the right column was lower

--- a/nablapps/news/templates/news/news_list.html
+++ b/nablapps/news/templates/news/news_list.html
@@ -20,9 +20,8 @@
      grid-template-rows: repeat(4, 15px auto);
      grid-column-gap: 15px;
      grid-template-areas:
-         "more-news-1 ."
          "more-news-1 more-news-2"
-         ".           more-news-2";
+         "more-news-1 more-news-2";
  }
 
  .news {
